[package]
name = "log-writer"
version = "0.6.0"
authors = ["The log-writer Authors <oss@nyantec.com>"]
edition = "2018"
license = "MirOS"
description = "library to write a stream to disk while adhering usage limits"
repository = "https://github.com/nyantec/log-writer"

[dependencies]
libc = "0.2"
log = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = [ "derive" ], optional = true }
